--- a/styles/extra.css
+++ b/styles/extra.css
@@ -3,6 +3,16 @@ body {
   background-color: #DDDDFF;
 }
 
+ul {
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  list-style-type: none;
+  margin: 5px 0;
+  overflow: hidden;
+}
+
 .navbar {
   margin-bottom: 20px;
 }
@@ -40,6 +50,10 @@ body {
   text-align: center;
   padding: 5px;
   background-color: #FFFFFF;
+  border-bottom: 3px solid #3FD;
+  border-radius: 2%;
+  border-bottom-left-radius: 4%;
+  border-bottom-right-radius: 4%;
 }
 
 hr {
@@ -62,8 +76,20 @@ hr {
 }
 
 /*Skills progress bar */
+.skills .row  {
+  text-align: center;
+}
+
 .skill-card img {
-  padding: 20px 0px 3px 0px;
+  padding: 5px;
+  display: inline-block;
+  margin-bottom: 20px;
+  border-radius: px;
+  width: 100%;
+  height: 100%;
+}
+.skill-card .row {
+  vertical-align: middle;
 }
 .skill-card p {
   margin-bottom: 3px;
@@ -159,14 +185,4 @@ footer li i:hover {
 
 footer h4 i {
   width: 40px;
-}
-
-ul {
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  list-style-type: none;
-  margin: 5px 0;
-  overflow: hidden;
 }
