--- a/styles/extra.css
+++ b/styles/extra.css
@@ -178,6 +178,13 @@ footer li i {
   color: #FFF;
 }
 
+footer li img {
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  color: #FFF;
+}
+
 footer li i:hover {
   color: #0F9;
   cursor: pointer;
