fix error in page width

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -299,10 +299,23 @@
   background-color: beige;
   min-height: 40vh;
   z-index: 3;
-  width: 1600px;
   background: url('../images/landing_16x9_large.jpg');
   background-size: contain;
   opacity: 1;
 }
 
 /*#endregion story*/
+
+@media only screen and (max-device-width: 800px) and (orientation: portrait) {
+  .services__section {
+    max-width: 80%;
+  }
+}
+
+@media only screen and (orientation: portrait) {
+  .landing__bg {
+    background: url('../images/landing_16x9_large.jpg');
+    background-size: cover;
+    margin-top: -100px;
+  }
+}
